fixed models and added inline

--- a/asts_fitness_program/unit/templates/unit/base.html
+++ b/asts_fitness_program/unit/templates/unit/base.html
@@ -16,7 +16,7 @@
     <p>Flight ~ Fight ~ Win</p>
     <p><a href="{% url "unit:airman_list" %}">Home</a></p>
     <p><a href="{% url "unit:airman_search" %}">Search Airman</a></p>
-    <p><a href="{% url "unit:all_failure_list" %}">Fail/Satisfactory List</a></p>
+    <p><a href="{% url "unit:all_naughty_list" %}">Fail/Satisfactory/Non-Current List</a></p>
     <p><a href="{% url "unit:all_profile_list" %}">List of Profiles</a></p>
     <p><a href="{% url "unit:all_ptl_list" %}">Physical Training Leaders</a></p>
     <p><a href="{% url "unit:all_ufpm_list" %}">Unit Fitness Program Managers</a></p>
