--- a/asts_fitness_program/unit/templates/unit/ufpm/list.html
+++ b/asts_fitness_program/unit/templates/unit/ufpm/list.html
@@ -4,15 +4,15 @@
     <h1>Unit Fitness Program Managers</h1>
     {% for ufpm in all_ufpm_list %}
         <h2>
-            <a href="{{ ufpm.get_absolute_url }}">
+            <a href="{{ ufpm.airman_id.get_absolute_url }}">
                 {{ ufpm.airman_id}}
             </a>
         </h2>
         <p class="date">
-            UFPM Certification Date: {{ ufpm.ufpm_certification_date }}
+            Certification Date: {{ ufpm.ufpm_certification_date }}
         </p>
         <p class="date">
-            UFPM Expiration Date: {{ ufpm.ufpm_expiration_date }}
+            Expiration Date: {{ ufpm.ufpm_expiration_date }}
         </p>
         <p class="date">
             {{ ufpm.ptl_id }}
