--- a/asts_fitness_program/unit/templates/admin/base_site.html
+++ b/asts_fitness_program/unit/templates/admin/base_site.html
@@ -3,11 +3,15 @@
 
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 {% block extrastyle %}
-    <link rel="stylesheet" href="{% static  'css/admin.css' %}">
+    <link rel="stylesheet" href="{% static  'css/base.css' %}">
 {% endblock %}
 
 {% block branding %}
-    <h1 id="site-name"><a href="{% url 'admin:index' %}">349 ASTS Site Administration</a></h1>
+    <h1 id="site-name">
+        <a href="{% url 'admin:index' %}">
+            349 ASTS Site Administration
+        </a>
+    </h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
